Changed the color schema of sign in button

--- a/public/css/style.styl
+++ b/public/css/style.styl
@@ -57,6 +57,7 @@ label, h6 {
 	}
 	#btn_sign_in{
 		color: white;
+		background-color:#4F46E5;
 	}
 	#btn_remember{
 		background: white;
@@ -84,6 +85,7 @@ label, h6 {
 		#forgot-password{
 			float left
 			margin-left 16px;
+			
 		}
 		#create-account{
 			float right
