Added Base Level Design

--- a/server/views/login.pug
+++ b/server/views/login.pug
@@ -23,7 +23,7 @@ block content
 			hr
 			.btm-links(style='color:#4f46e5 !important;') 
 				#forgot-password
-					a(href='#',style='color:#4f46e5 !important;') Forgot Your Password?
+					<a href="#" style="color:red"> Forgot Your Password?
 				#create-account
 					a(href='/signup',style='color:#4f46e5 !important;') Create An Account
 
