Updated CDN to Secure version and Changed PORTS

--- a/server/views/level/base.pug
+++ b/server/views/level/base.pug
@@ -6,7 +6,7 @@ html(lang="en")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         link(rel="stylesheet", href="css/level/style.css", attr)
         script(src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js") 
-        <script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.0/TweenMax.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.0/TweenMax.min.js"></script>
         title Level
     body
         //- <img class="squares" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/169963/squares.png"/>
