--- a/server/views/level/base.pug
+++ b/server/views/level/base.pug
@@ -5,6 +5,7 @@ html(lang="en")
         meta(http-equiv="X-UA-Compatible", content="IE=edge")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         link(rel="stylesheet", href="css/level/style.css", attr)
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.0/font/bootstrap-icons.css">
         script(src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js") 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.0/TweenMax.min.js"></script>
         title Level
@@ -37,4 +38,7 @@ html(lang="en")
             </div>
         </div>
         </div>
+        <a style="position: absolute;font-size: 40px;bottom: 30px;right: 30px;text-shadow: 0px 0px 1px;color: rosybrown;">
+         <i class="bi bi-gear-fill"></i>
+        </a>
         script(src="js/views/level/base.js") 
