--- a/server/views/level/base.pug
+++ b/server/views/level/base.pug
@@ -38,7 +38,7 @@ html(lang="en")
             </div>
         </div>
         </div>
-        <a style="position: absolute;font-size: 40px;bottom: 30px;right: 30px;text-shadow: 0px 0px 1px;color: rosybrown;">
+        <a title="Settings" href="/settings" style="position: absolute;font-size: 40px;bottom: 30px;right: 30px;text-shadow: 0px 0px 1px;color: rosybrown;">
          <i class="bi bi-gear-fill"></i>
         </a>
         script(src="js/views/level/base.js") 
