--- a/server/views/level/question_image.pug
+++ b/server/views/level/question_image.pug
@@ -4,7 +4,7 @@ html(lang="en")
         meta(charset="UTF-8")
         meta(http-equiv="X-UA-Compatible", content="IE=edge")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
-        link(rel="stylesheet", href="css/level/style.css", attr)
+        link(rel="stylesheet", href="css/level/question_image.css", attr)
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.0/font/bootstrap-icons.css">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
         script(src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js") 
@@ -41,7 +41,7 @@ html(lang="en")
         </div>
         //- image location
         <div class="container ">
-                <img src="./11.jpg" class="img-fluid" alt="Responsive image">
+                <img src="./11.png" class="img-fluid" alt="Responsive image">
         </div>
 
         //input fiels & submit button
@@ -58,4 +58,4 @@ html(lang="en")
         <a title="Settings" href="/settings" style="position: absolute;font-size: 40px;bottom: 30px;right: 30px;text-shadow: 0px 0px 1px;color: rosybrown;">
          <i class="bi bi-gear-fill"></i>
         </a>
-        script(src="js/views/level/base.js") 
+        script(src="js/views/level/question_image.js") 
