--- a/server/views/level/base.pug
+++ b/server/views/level/base.pug
@@ -11,27 +11,31 @@ html(lang="en")
         title Level
     body
         //- <img class="squares" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/169963/squares.png"/>
+        
+
+  
+        
         <div class="boxes">
         <div class="box"></div>
         <div class="box"></div>
         <div class="box">
             <div class="progress">
             <div class="bar">
-                <div class="bar__fill" style="width: 33%"></div>
+                <div class="bar__fill" id="id" style="width: 66%"></div>
             </div>
-            <div class="point point--complete">
+            <div class="point  " id ="1">
                 <div class="bullet"></div>
                 <label class="label">1</label>
             </div>
-            <div class="point point--active">
+            <div class="point  " id="2">
                 <div class="bullet"></div>
                 <label class="label">2</label>
             </div>
-            <div class="point">
+            <div class="point " id="3">
                 <div class="bullet"></div>
                 <label class="label">3</label>
             </div>
-            <div class="point">
+            <div class="point " id="4">
                 <div class="bullet"></div>
                 <label class="label">4</label>
             </div>
@@ -42,3 +46,25 @@ html(lang="en")
          <i class="bi bi-gear-fill"></i>
         </a>
         script(src="js/views/level/base.js") 
+        script.
+            const level = 4;
+            if (level==1){
+            document.getElementById("id").style.width="0%";
+            var element = document.getElementById("1");
+            element.classList.add("point--active");
+            }
+            if (level==2){
+            document.getElementById("id").style.width="33%";
+            var element = document.getElementById("2");
+            element.classList.add("point--active");
+            }
+            if (level==3){
+            document.getElementById("id").style.width="66%";
+            var element = document.getElementById("3");
+            element.classList.add("point--active");
+            }
+            if (level==4){
+            document.getElementById("id").style.width="99%";
+            var element = document.getElementById("4");
+            element.classList.add("point--active");
+            }
