--- a/server/views/level/question_audio.pug
+++ b/server/views/level/question_audio.pug
@@ -43,9 +43,8 @@ html(lang="en")
         <div class="container audio">
                 <audio controls>
                     <source src="#" type="audio/ogg">
-                    <source src="#" type="audio/mpeg">
-                  Your browser does not support the audio element.
-                  </audio>
+                    <source src="#" type="audio/mpeg">Your browser does not support the audio element.
+                </audio>
         </div>
 
         //- input field & submit button
