--- a/server/views/level/base.pug
+++ b/server/views/level/base.pug
@@ -53,3 +53,5 @@ html(lang="en")
                    Originally based on the English alphabet, ASCII encodes 128 specified characters into seven-bit integers as shown by the ASCII chart above. Ninety-five of the encoded characters are printable: these include the digits 0 to 9, lowercase letters a to z, uppercase letters A to Z, and punctuation symbols. In addition, the original ASCII specification included 33 non-printing control codes which originated with Teletype machines; most of these are now obsolete, although a few are still commonly used, such as the carriage return, line feed and tab codes.
 
                    We will set you off for the adventurous venture with this information. Remember to relate this information with any message you might have got before.
+             p(style="text-align:centre;")
+                b May The Odds Be In Your Favour and remember to Sum It All Up!
