--- a/server/views/level/base.pug
+++ b/server/views/level/base.pug
@@ -38,9 +38,9 @@ html(lang="en")
             </div>
         </div>
         </div>
-        <a title="Settings" href="/settings" style="position: fixed;font-size: 40px;bottom: 30px;right: 30px;text-shadow: 0px 0px 1px;color: rosybrown;">
-         <i class="bi bi-gear-fill"></i>
-        </a>
+        //- <a title="Settings" href="/settings" style="position: fixed;font-size: 40px;bottom: 30px;right: 30px;text-shadow: 0px 0px 1px;color: rosybrown;">
+        //-  <i class="bi bi-gear-fill"></i>
+        //- </a>
         script(src="js/views/level/base.js")
         div(style='text-align:center; padding-top:12em;padding-left:1.5em;padding-right:1.5em;')
              p
