--- a/server/views/level/base.pug
+++ b/server/views/level/base.pug
@@ -4,6 +4,9 @@ html(lang="en")
         meta(charset="UTF-8")
         meta(http-equiv="X-UA-Compatible", content="IE=edge")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
+        <link rel="stylesheet" href="css/level2/game_style.css">
+        <link rel="stylesheet" href="css/tailwind/styles.css">
+
         link(rel="stylesheet", href="css/level/style.css", attr)
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.0/font/bootstrap-icons.css">
         script(src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js") 
@@ -38,7 +41,41 @@ html(lang="en")
             </div>
         </div>
         </div>
-        <a title="Settings" href="/settings" style="position: absolute;font-size: 40px;bottom: 30px;right: 30px;text-shadow: 0px 0px 1px;color: rosybrown;">
-         <i class="bi bi-gear-fill"></i>
-        </a>
-        script(src="js/views/level/base.js") 
+        //- <a title="Settings" href="/settings" style="position: fixed;font-size: 40px;bottom: 30px;right: 30px;text-shadow: 0px 0px 1px;color: rosybrown;">
+        //-  <i class="bi bi-gear-fill"></i>
+        //- </a>
+        script(src="js/views/level/base.js")
+        div(style='text-align:center; padding-top:12em;padding-left:1.5em;padding-right:1.5em;')
+             p
+                b  “Greetings of the day, hunters. Get ready as the treasure awaits you. The intense search has now begun. All the best!”
+             p(style="text-align:justify;line-height:1.5")
+                . 
+                   Character encoding is an essential part of digital communication. The Internet Assigned Numbers Authority (IANA) prefers the name US-ASCII for this character encoding. ASCII was developed from telegraph code. Its first commercial use was as a seven-bit teleprinter code promoted by Bell data services. Work on the ASCII standard began in May 1961, with the first meeting of the American Standards Association's (ASA) (now the American National Standards Institute or ANSI) X3.2 subcommittee. The first edition of the standard was published in 1963, underwent a major revision during 1967, and experienced its most recent update during 1986. Compared to earlier telegraph codes, the proposed Bell code and ASCII were both ordered for more convenient sorting (i.e., alphabetization) of lists and added features for devices other than teleprinters.
+
+                   Originally based on the English alphabet, ASCII encodes 128 specified characters into seven-bit integers as shown by the ASCII chart above. Ninety-five of the encoded characters are printable: these include the digits 0 to 9, lowercase letters a to z, uppercase letters A to Z, and punctuation symbols. In addition, the original ASCII specification included 33 non-printing control codes which originated with Teletype machines; most of these are now obsolete, although a few are still commonly used, such as the carriage return, line feed and tab codes.
+
+                   We will set you off for the adventurous venture with this information. Remember to relate this information with any message you might have got before.
+             p(style="text-align:centre;")
+                b May The Odds Be In Your Favour and remember to Sum It All Up!
+
+        <div class="container">
+
+        <form class="quiz">
+            <div class="quiz__inner">
+                <div data-question="1" class="quiz__step--1 quiz__step--current quiz__step">
+                    <div class="question__emoji">🏙️ </div>
+                        <h1 class="quiz__question">What is the capital?</h1>
+
+                        <div class="container mx-auto">
+                          <form class="flex w-full max-w-sm mx-auto space-x-3">
+                           <input class="flex-1 appearance-none border border-transparent w-full py-2 px-4 bg-white text-gray-700 placeholder-gray-400 shadow-md rounded-lg text-base focus:outline-none focus:ring-2 focus:ring-purple-600 focus:border-transparent" type="email" placeholder="Your Answer">
+                           <button class="flex-shrink-0 bg-purple-600 text-white text-base font-semibold py-2 px-4 rounded-lg shadow-md hover:bg-purple-700 focus:outline-none focus:ring-2 focus:ring-purple-500 focus:ring-offset-2 focus:ring-offset-purple-200" type="button">
+                             <i class="bi bi-arrow-right"></i>
+                           </button>
+                          </form>
+                        </div>
+                </div>
+
+            </div>
+    </form>
+</div>
