Updated Image Alignment

--- a/server/views/level/base_image.pug
+++ b/server/views/level/base_image.pug
@@ -49,11 +49,9 @@ html(lang="en")
              p(style='font-weight:900;letter-spacing:1px;font-size:20px').
                “Greetings of the day, hunters. Get ready as the treasure awaits you. The intense search has now begun. All the best!”
              br
-             img(src="/image/image.jpg" alt='Nature' style='width: 100%;height: auto;' width='600' height='400')
-
+             div
+                img(src="https://sandiway.arizona.edu/sudoku/wildcatjan17p.gif" alt='Nature' style='height: 300px;margin:auto;object-fit:contain')
              br
-             p(style="text-align:centre;margin-top:10px")
-                b May The Odds Be In Your Favour and remember to Sum It All Up!
 
         <div class="container">
 
