--- a/server/views/qtypes/components/myinput.pug
+++ b/server/views/qtypes/components/myinput.pug
@@ -1,12 +1,12 @@
-<div class="container">
+<div id="sidcont" class="container">
 
 <form class="quiz">
     <div class="quiz__inner">
         <div data-question="1" class="quiz__step--1 quiz__step--current quiz__step">
             <div class="container mx-auto">
                 <form class="flex w-full max-w-sm mx-auto space-x-3">
-                    <input class="flex-1 appearance-none border border-transparent w-full py-2 px-4 bg-white text-gray-700 placeholder-gray-400 shadow-md rounded-lg text-base focus:outline-none focus:ring-2 focus:ring-purple-600 focus:border-transparent" type="email" placeholder="Your Answer">
-                    <button class="flex-shrink-0 bg-purple-600 text-white text-base font-semibold py-2 px-4 rounded-lg shadow-md hover:bg-purple-700 focus:outline-none focus:ring-2 focus:ring-purple-500 focus:ring-offset-2 focus:ring-offset-purple-200" type="button">
+                    <input id="sidinput" class="flex-1 appearance-none border border-transparent w-full py-2 px-4 bg-white text-gray-700 placeholder-gray-400 shadow-md rounded-lg text-base focus:outline-none focus:ring-2 focus:ring-purple-600 focus:border-transparent" type="email" placeholder="Your Answer">
+                    <button id="sidbtn" class="flex-shrink-0 bg-purple-600 text-white text-base font-semibold py-2 px-4 rounded-lg shadow-md hover:bg-purple-700 focus:outline-none focus:ring-2 focus:ring-purple-500 focus:ring-offset-2 focus:ring-offset-purple-200" type="button">
                         <i class="bi bi-arrow-right"></i>
                     </button>
                 </form>
@@ -15,3 +15,4 @@
     </div>
 </form>
 </div>
+script(src="js/views/level/answercheck.js")
