--- a/server/views/qtypes/qaudio.pug
+++ b/server/views/qtypes/qaudio.pug
@@ -2,16 +2,7 @@ include components/mylevelbox.pug
 doctype html
 html(lang="en")
     head
-        meta(charset="UTF-8")
-        meta(http-equiv="X-UA-Compatible", content="IE=edge")
-        meta(name="viewport", content="width=device-width, initial-scale=1.0")
-        <link rel="stylesheet" href="css/level2/game_style.css">
-        <link rel="stylesheet" href="css/tailwind/styles.css">
-
-        link(rel="stylesheet", href="css/level/style.css", attr)
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.0/font/bootstrap-icons.css">
-        script(src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js") 
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.0/TweenMax.min.js"></script>
+        include components/header.pug
         title Level #{current_level}
     body
         +levelbox(current_level)
