Fixed Alignment of Input Button

--- a/server/views/qtypes/components/myinput.pug
+++ b/server/views/qtypes/components/myinput.pug
@@ -1,5 +1,8 @@
 <div id="sidcont" class="container">
-
+style.
+    .container{
+        margin:auto;
+    }
 <form class="quiz">
     <div class="quiz__inner">
         <div data-question="1" class="quiz__step--1 quiz__step--current quiz__step">
