--- a/server/views/qtypes/components/header.pug
+++ b/server/views/qtypes/components/header.pug
@@ -8,3 +8,19 @@ link(rel="stylesheet", href="css/level/style.css", attr)
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.0/font/bootstrap-icons.css">
 script(src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js") 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.0/TweenMax.min.js"></script>
+style.
+    .myfavbutton{
+        position:fixed;
+        font-size:20px;
+        top:10px;
+        right:10px;
+        width:50px;
+        height:50px;
+        margin:5px;
+        background-color:#7c3aed;
+        border-radius:50%;
+        display:flex;
+        align-items:center;
+        justify-content:center;
+        color:white
+    }
