--- a/server/views/qtypes/components/mylevelbox.pug
+++ b/server/views/qtypes/components/mylevelbox.pug
@@ -30,7 +30,7 @@ mixin levelbox(currentlevel)
         </div>
     </div>
     </div>
-    //- <a title="Settings" href="/logout" style="position: fixed;font-size: 30px;bottom: 30px;right: 30px;text-shadow: 0px 0px 1px;color: rosybrown;">
-    //-  <i class="bi bi-box-arrow-left"></i>
-    //- </a>
+    <a title="Settings" href="/logout" class="myfavbutton">
+     <i class="bi bi-box-arrow-left"></i>
+    </a>
     script(src="js/views/level/base.js")
