--- a/server/views/qtypes/components/header.pug
+++ b/server/views/qtypes/components/header.pug
@@ -24,3 +24,20 @@ style.
         justify-content:center;
         color:white
     }
+
+    .loadingspinner {
+        pointer-events: none;
+        width: 1.5em;
+        height: 1.5em;
+        border: 0.2em solid transparent;
+        border-color: #eee;
+        border-top-color: #7c3aed;
+        border-radius: 50%;
+        animation: loadingspin 1s linear infinite;
+    }
+
+    @keyframes loadingspin {
+        100% {
+            transform: rotate(360deg)
+        }
+    }
