--- a/server/views/qtypes/components/myinput.pug
+++ b/server/views/qtypes/components/myinput.pug
@@ -1,4 +1,4 @@
-<div id="sidcont" class="container">
+<div class="container">
 style.
     .container{
         margin:auto;
@@ -6,7 +6,10 @@ style.
 <form class="quiz">
     <div class="quiz__inner">
         <div data-question="1" class="quiz__step--1 quiz__step--current quiz__step">
-            <div class="container mx-auto">
+            <div id="myquestionspinner" class="container mx-auto" style="display:none">
+                .loadingspinner
+            </div>
+            <div id="sidcont" class="container mx-auto">
                 <form class="flex w-full max-w-sm mx-auto space-x-3">
                     <input id="sidinput" class="flex-1 appearance-none border border-transparent w-full py-2 px-4 bg-white text-gray-700 placeholder-gray-400 shadow-md rounded-lg text-base focus:outline-none focus:ring-2 focus:ring-purple-600 focus:border-transparent" type="email" placeholder="Your Answer">
                     <button id="sidbtn" class="flex-shrink-0 bg-purple-600 text-white text-base font-semibold py-2 px-4 rounded-lg shadow-md hover:bg-purple-700 focus:outline-none focus:ring-2 focus:ring-purple-500 focus:ring-offset-2 focus:ring-offset-purple-200" type="button">
