Added Link To Discord Server

--- a/server/views/qtypes/components/myinput.pug
+++ b/server/views/qtypes/components/myinput.pug
@@ -94,5 +94,8 @@ script.
         location.reload();
     });
 
+    $("#hintbtn").click(function(){
+        window.location.href="https://discord.gg/A97Y9u5MMa";
+    });
 
 script(src="js/views/level/answercheck.js")
