--- a/server/views/qtypes/qcompleted.pug
+++ b/server/views/qtypes/qcompleted.pug
@@ -3,7 +3,7 @@ doctype html
 html(lang="en")
     head
         include components/header.pug
-        title Completed #{current_level}
+        title Game Completed
     body
         +levelbox(current_level)
 
