Added Loading Animation on All Pages

--- a/server/views/qtypes/components/header.pug
+++ b/server/views/qtypes/components/header.pug
@@ -41,3 +41,12 @@ style.
             transform: rotate(360deg)
         }
     }
+
+    .mygamespin {
+        height: 100vh;
+        margin: 0;
+        padding: 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
