--- a/server/views/qtypes/qaudio.pug
+++ b/server/views/qtypes/qaudio.pug
@@ -6,34 +6,37 @@ html(lang="en")
         title Level #{current_level}
     body
         +levelbox(current_level)
+        div(id="mygamespinner",class="mygamespin")
+            .loadingspinner
+        div(id="mygamecomponents",style="display:none")
+            div(style='text-align:center; padding-top:225px;width:90%;margin:auto;')
+                p(style='font-weight:900;letter-spacing:1px;font-size:20px') #{heading_content}
+                
+            //-audio player
+            <div class = "container">
+                <div class="gap-example">
+                    <audio controls>
+                        <source src=#{audio1_url} type="audio/wav">
+                        Your browser does not support the audio element.
+                    </audio>
+                </div>
+            </div>
+            <div class = "container">
+                <div class="gap-example">
+                    <audio controls>
+                        <source src=#{audio2_url} type="audio/wav">
+                        Your browser does not support the audio element.
+                    </audio>
+                </div>
+            </div>
+            <div class = "container">
+                <div class="gap-example">
+                    <audio controls>
+                        <source src=#{audio3_url} type="audio/wav">
+                        Your browser does not support the audio element.
+                    </audio>
+                </div>
+            </div>        
 
-        div(style='text-align:center; padding-top:225px;width:90%;margin:auto;')
-             p(style='font-weight:900;letter-spacing:1px;font-size:20px') #{heading_content}
-             
-        //-audio player
-        <div class = "container">
-            <div class="gap-example">
-                <audio controls>
-                    <source src=#{audio1_url} type="audio/wav">
-                    Your browser does not support the audio element.
-                </audio>
-            </div>
-        </div>
-        <div class = "container">
-            <div class="gap-example">
-                <audio controls>
-                    <source src=#{audio2_url} type="audio/wav">
-                    Your browser does not support the audio element.
-                </audio>
-            </div>
-        </div>
-        <div class = "container">
-            <div class="gap-example">
-                <audio controls>
-                    <source src=#{audio3_url} type="audio/wav">
-                    Your browser does not support the audio element.
-                </audio>
-            </div>
-        </div>        
-
-        include components/myinput.pug
+            include components/myinput.pug
+        include components/footer.pug
