--- a/server/views/qtypes/qcompleted.pug
+++ b/server/views/qtypes/qcompleted.pug
@@ -6,13 +6,16 @@ html(lang="en")
         title Game Completed
     body
         +levelbox(current_level)
-
-        div(style='text-align:center; padding-top:350px;width:90%;margin:auto;')
-            p(style='font-weight:900;letter-spacing:1px;font-size:30px').
-                Congratulations! you have finished the game :)
-            br
-            p(style='font-weight:900;letter-spacing:1px;font-size:30px').
-                🥳🎉🎊
-                <button onclick="location.href='https://github.com/siddhantdixit/IRIS-LevelDesign'" id="sidbtn" style="display:block;margin:auto;margin-top:60px"  class="flex-shrink-0 bg-purple-600 text-white text-base font-semibold py-2 px-4 rounded-lg shadow-md hover:bg-purple-700 focus:outline-none focus:ring-2 focus:ring-purple-500 focus:ring-offset-2 focus:ring-offset-purple-200" type="button">
-                    Report Issue
-                </button>
+        div(id="mygamespinner",class="mygamespin")
+            .loadingspinner
+        div(id="mygamecomponents",style="display:none")
+            div(style='text-align:center; padding-top:350px;width:90%;margin:auto;')
+                p(style='font-weight:900;letter-spacing:1px;font-size:30px').
+                    Congratulations! you have finished the game :)
+                br
+                p(style='font-weight:900;letter-spacing:1px;font-size:30px').
+                    🥳🎉🎊
+                    <button onclick="location.href='https://github.com/siddhantdixit/IRIS-LevelDesign'" id="sidbtn" style="display:block;margin:auto;margin-top:60px"  class="flex-shrink-0 bg-purple-600 text-white text-base font-semibold py-2 px-4 rounded-lg shadow-md hover:bg-purple-700 focus:outline-none focus:ring-2 focus:ring-purple-500 focus:ring-offset-2 focus:ring-offset-purple-200" type="button">
+                        Report Issue
+                    </button>
+        include components/footer.pug
