--- a/server/views/qtypes/qcrossward.pug
+++ b/server/views/qtypes/qcrossward.pug
@@ -21,7 +21,8 @@ html(lang="en")
             @media (max-width: 800px) {
                 img{
                     width:100%;
-                    padding:0px;
+                    padding :0px;
+                    padding-bottom:20px;
                 }
             }    
 
