--- a/public/css/style.styl
+++ b/public/css/style.styl
@@ -43,7 +43,6 @@ label, h6 {
 */
 
 #login{
-	width: 380px;
 	.btn{
 		float: left;
 		width: 48%;
@@ -124,9 +123,7 @@ label, h6 {
 */
 
 .modal{
-	.modal-dialog{
-		width:480px;
-	}
+
 	.form-group{
 		margin-bottom: 0px;
 	}
@@ -150,6 +147,8 @@ label, h6 {
 }
 
 .center-vertical{
+	max-width: 400px;
+  	width: 90%;
 	top 50%; left 50%
 	position: absolute;
 	-webkit-transform: translate(-50%, -50%);
