Added Crossword Questions

--- a/server/views/qtypes/qcrossward.pug
+++ b/server/views/qtypes/qcrossward.pug
@@ -32,8 +32,8 @@ html(lang="en")
             p(style='font-weight:900;letter-spacing:1px;font-size:20px') #{heading_content}
             br
         .container
-            img(src='https://upload.wikimedia.org/wikipedia/commons/thumb/1/14/CrosswordUSA.svg/1200px-CrosswordUSA.svg.png' style='padding:20px;' alt='nature')
-            img(src='https://upload.wikimedia.org/wikipedia/commons/thumb/1/14/CrosswordUSA.svg/1200px-CrosswordUSA.svg.png' style='padding:20px;' alt='nature')
+            img(src=image_url style='padding:20px;' alt='nature')
+            img(src=hints_url style='padding:20px;' alt='nature')
             br
 
         include components/myinput.pug
