Changed Fields Types

--- a/server/views/logindesign/login.pug
+++ b/server/views/logindesign/login.pug
@@ -26,7 +26,7 @@
                 <div class="rounded-md shadow-sm -space-y-px">
                     <div>
                         <label for="user-tf" class="sr-only">Username</label>
-                        <input id="user-tf" name="user" type="text" autocomplete="email" required class="appearance-none rounded-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 rounded-t-md focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm" placeholder="Username">
+                        <input id="user-tf" name="user" type="text" required class="appearance-none rounded-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 rounded-t-md focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm" placeholder="Username">
                     </div>
                     <div>
                         <label for="pass-tf" class="sr-only">Password</label>
