--- a/server/views/logindesign/components/successdialog.pug
+++ b/server/views/logindesign/components/successdialog.pug
@@ -32,5 +32,5 @@
 
 script.
     $("#successokbutton").click(function(){
-        $("#successdialog").slideUp();
+        window.location.href = '/';
     });
