Added Discord Link

--- a/server/views/logindesign/login.pug
+++ b/server/views/logindesign/login.pug
@@ -100,7 +100,7 @@
 
                 <p class="mt-2 text-center text-sm text-gray-600">
 
-                    <a href="#" class="font-medium text-indigo-600 hover:text-indigo-500"> Report an issue
+                    <a href="https://discord.gg/A97Y9u5MMa" class="font-medium text-indigo-600 hover:text-indigo-500"> Report an issue
                     </a>
                 </p>
 
