Confirm Password Field Added on SignUP

--- a/server/views/logindesign/register.pug
+++ b/server/views/logindesign/register.pug
@@ -74,6 +74,11 @@
                         <label for="pass-tf" class="sr-only">Password</label>
                         <input id="pass-tf" name="pass" type="password" autocomplete="current-password" required class="appearance-none rounded-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 rounded-md focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm" placeholder="Password">
                     </div>
+
+                    <div>
+                        <label for="cnfpass-tf" class="sr-only">Confirm Password</label>
+                        <input id="cnfpass-tf" name="cnfpass" type="password" required class="appearance-none rounded-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 rounded-md focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm" placeholder="Confirm Password">
+                    </div>
                 </div>
 
 
